--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,18 +1,19 @@
 
 header
     {
-        background-color: #ffffff;
-        border-color: #ffffff;
+        background-color: white;
+        border-bottom: solid thick black;
+
     }
+
+
 
 body
     {
-        background-color: #ffffff;
-        border: #dddddd;
         background-image: url("background.png");
         background-repeat: repeat;
-        
-    }
+        margin: 0 0;
+     }
 
 h1
     {
@@ -21,6 +22,7 @@ h1
         width: 187px;
         padding: 10px;
         font-family:Georgia, Times, Times New Roman, serif;
+        margin-left: 232px;
        
     }
 
@@ -28,6 +30,9 @@ h2
     {
         color: #4aaaa5;
         font-family: Georgia, Times, Times New Roman, serif;
+        margin-top: 60px;
+       
+        
     }
 
 .container
@@ -35,35 +40,51 @@ h2
         width: 960px;
         margin: 0 auto;
     }
-
-.container1
+h1, h3
     {
-        background-color: white;
-        padding-right: 5px;
-        padding-left: 5px;
-        padding-top: 2.5px;
-        padding-bottom: 2.5px;
+        display: inline-block;
     }
 
-#about-image
+h3  
     {
         float: right;
-        width: 10%;
+        width: 7%;
+        margin-top: 3%;
+        
     }
 
-#contact-image
+img
     {
-        float: right;
-        width: 10%;
+        
+        padding-right: 20px;
+        background: white;
+        margin-top: 10px;
     }
 
-#portfolio-image
-    {
-        float: right;
-        width: 10%;
+footer
+    {   background-color: grey;
+        margin-top: 80px;
+        text-align: center;
+        padding: 30px;
+        margin-bottom: 0;
+        border-top: solid thick black;
     }
+
+.bio
+    {
+        background: white;
+    }
+
+
 
 .text
     {
         font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
+    }
+
+.clearfix::after 
+    {
+        content: "";
+        display: block;
+        clear: both;
     }
