--- a/style1.css
+++ b/style1.css
@@ -1,30 +1,8 @@
-header
-    {
-        background-color: #ffffff;
-        border: #ffffff;
-    }
 
-body
-    {
-        background-color: #ffffff;
-        border: #dddddd
-    }
 
-h1
+.clearfix::after 
     {
-        background-color: #4aaaa5;
-        color: white;
-        width: 158px;
-        padding: 5px
-    }
-
-h2
-    {
-        color: #4aaaa5;
-    }
-
-.container
-    {
-        width: 960px;
-        margin: 0 auto;
+        content: "";
+        display: block;
+        clear: both;
     }
